--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,37 @@
 /* add home page styles here */
+
+h1 {
+  font-size: 1.5rem;
+}
+
+.main-section {
+  border: 30px dotted black;
+}
+
+.rules {
+  margin: 15px;
+  font-size: 1.2rem;
+}
+
+.input {
+  margin: 15px;
+  height: 25px;
+}
+
+.submit {
+  margin: 15px;
+  height: 25px;
+}
+
+.submit:hover {
+  cursor: pointer;
+
+}
+
+.highLow {
+  font-size: 1.2rem;
+}
+
+.reset {
+  margin: 15px;
+}
